--- a/Warcaby/Warcaby.vcxproj.filters
+++ b/Warcaby/Warcaby.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="ArtificialPlayer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="KillTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ArtificialPlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="KillTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
